--- a/src/main/resources/static/web/login.html
+++ b/src/main/resources/static/web/login.html
@@ -15,7 +15,7 @@
 </head>
 
 <body id="app" class="relative">
-	<div class="w-screen h-screen flex justify-center items-center absolute z-50 bg-gray-700/50">
+	<div :class="{'hidden': !isOpen}" class="w-screen h-screen flex justify-center items-center absolute z-50 bg-gray-700/50">
 		<div class="bg-gray-900 h-[300px] w-[400px] rounded shadow flex flex-col justify-center items-center gap-5">
 			<div class="flex flex-row relative items-center justify-center">
 				<i class="uil uil-check text-2xl absolute text-green-700 right-[45px]"></i>				
@@ -25,7 +25,7 @@
 				<h2 class="text-xl font-bold text-white">One last thing!</h2>
 				<p class="text-xl font-thin text-white text-center">Check out your inbox in: <span>{{email}}</span></p>
 			</div>
-			<button class="py-2 px-5 bg-yellow-500 rounded text-black font-black shadow">OK</button>
+			<button @click="isOpen= !isOpen" class="py-2 px-5 bg-yellow-500 rounded text-black font-black shadow">OK</button>
 		</div>
 	</div>
 	<div class="section bg-login">
