update de la pagina entera, modifique detalles del front

--- a/src/main/resources/static/web/contact.html
+++ b/src/main/resources/static/web/contact.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
     <!--====== Title ======-->
-    <title>The best gym - Balcam's</title>
+    <title>Contact - Balcam's</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -75,8 +75,8 @@
                                 <img class="pr-3" style="height: 70px;" src="assets/images/logo-Balcam-white.png"
                                     alt="Logo">
                                 <div class="pt-2 d-flex flex-column justify-content-center align-items-center">
-                                    <H4 class="h4Balcam">BALCAM <span class="yellow-color">'S</span></H4>
-                                    <h4 class="h4Balcam">GYM</h4>
+                                    <H4 class="h4Balcam text-white">BALCAM <span class="yellow-color">'S</span></H4>
+                                    <h4 class="h4Balcam text-white">GYM</h4>
                                 </div>
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -90,19 +90,19 @@
                             <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                                 <ul id="nav" class="navbar-nav ml-auto">
                                     <li class="nav-item active">
-                                        <a class="page-scroll" href="#home">Home</a>
+                                        <a class="page-scroll" href="./index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#courses">Lessons</a>
+                                        <a class="page-scroll" href="./index.html">Lessons</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#about">About</a>
+                                        <a class="page-scroll" href="./index.html">About</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="./shop.html">Shop</a>
+                                        <a class="page-scroll" href="./index.html">Shop</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#pricing">Membership</a>
+                                        <a class="page-scroll" href="./index.html">Membership</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#">Contact</a>
@@ -126,7 +126,7 @@
         <div class="container">
             <div class="d-flex flex-column align-items-center">
                 <div class="col-lg-6">
-                    <div class="contact_form pt-105 pb-120">
+                    <div class="contact_form pt-105 pb-100">
                         <div class="section_title pb-25">
                             <span class="line"></span>
                             <h3 class="title">Get in Touch</h3>
@@ -329,7 +329,7 @@
                             <h4 class="footer_title">Contact</h4>
                             <ul class="info">
                                 <li>Phone: 093826715212</li>
-                                <li><a href="https://wa.link/d73goe"><i class="lni lni-whatsapp"></i></a>Whatsapp</li>
+                                <li><a href="https://wa.link/d73goe"><i class="lni lni-whatsapp"></i></a> Whatsapp</li>
                                 <li>Email: balcamscontact@gmail.com</li>
                                 <li>Location: Jackson Heights, New York, USA</li>
                             </ul>
