--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -73,8 +73,8 @@
                             <a class="d-flex flex-row justify-content-center align-items-center navbar-brand " href="index.html">
                                 <img class="pr-3" style="height: 70px;" src="assets/images/logo-Balcam-white.png" alt="Logo">
                                 <div class="pt-2 d-flex flex-column justify-content-center align-items-center">
-                                    <H4 class="h4Balcam">BALCAM <span class="yellow-color">'S</span></H4>
-                                    <h4 class="h4Balcam">GYM</h4>
+                                    <h4 class="h4Balcam text-white">BALCAM<span class="yellow-color">'S</span></h4>
+                                    <h4 class="h4Balcam text-white">GYM</h4>
                                 </div>
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -118,12 +118,15 @@
             <div class="container" >
                 <div class="row justify-content-center">
                     <div class="col-lg-9">
-                        <div class="header-hero-content text-center">
+                        <div style="position:absolute; top:0; left:0;">
                             <h3 class="header-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Balcam's is the best option</h3>
                             <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">This gym is the best you can choose, if what you want is a real change in your physical appearance</p>
+                            </div>
+                        <div class="header-hero-content text-center">
+                           
                             <ul>
                                 <li><a href="./login.html"  rel="nofollow" class="main-btn wow fadeInUp font-weight-bold" data-wow-duration="1.3s" data-wow-delay="0.8s">Register FREE Now</a></li>
-                                <li><a href="/web/shop.html" class="main-btn main-btn-2 wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.2s">Shop NOW</a></li>
+                                <li><a href="./shop.html" class="main-btn main-btn-2 wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.2s">Shop NOW</a></li>
                             </ul>
                         </div> <!-- header hero content -->
                     </div>
@@ -308,10 +311,6 @@
                         </div>
                         <div class="team_content">
                             <ul class="social">
-                                <li><a href="javascript:void(0)"><i class="lni lni-facebook-filled"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-twitter-original"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-linkedin-original"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-instagram-original"></i></a></li>
                             </ul>
                             <h5 class="team_name">David Robinson</h5>
                             <p>Fitness Trainer</p>
@@ -325,10 +324,6 @@
                         </div>
                         <div class="team_content">
                             <ul class="social">
-                                <li><a href="javascript:void(0)"><i class="lni lni-facebook-filled"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-twitter-original"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-linkedin-original"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-instagram-original"></i></a></li>
                             </ul>
                             <h5 class="team_name">Michael Logan</h5>
                             <p>Fitness Trainer</p>
@@ -342,10 +337,7 @@
                         </div>
                         <div class="team_content">
                             <ul class="social">
-                                <li><a href="javascript:void(0)"><i class="lni lni-facebook-filled"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-twitter-original"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-linkedin-original"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-instagram-original"></i></a></li>
+                            
                             </ul>
                             <h5 class="team_name">Sarah Lennox</h5>
                             <p>Fitness Trainer</p>
@@ -359,10 +351,6 @@
                         </div>
                         <div class="team_content">
                             <ul class="social">
-                                <li><a href="javascript:void(0)"><i class="lni lni-facebook-filled"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-twitter-original"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-linkedin-original"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-instagram-original"></i></a></li>
                             </ul>
                             <h5 class="team_name">Lisa Douglas</h5>
                             <p>Fitness Trainer</p>
@@ -496,7 +484,7 @@
                             <h4 class="footer_title">Contact</h4>
                             <ul class="info">
                                 <li>Phone: 093826715212</li>
-                                <li><a href="https://wa.link/d73goe"><i class="lni lni-whatsapp"></i></a>Whatsapp</li>
+                                <li><a href="https://wa.link/d73goe"><i class="lni lni-whatsapp"></i></a> Whatsapp</li>
                                 <li>Email: balcamscontact@gmail.com</li>
                                 <li>Location:    Jackson Heights, New York, USA</li>
                             </ul>
