--- a/src/main/resources/static/web/login.html
+++ b/src/main/resources/static/web/login.html
@@ -15,8 +15,8 @@
 </head>
 
 <body id="app" class="relative">
-	<div class="w-screen h-screen flex justify-center items-center absolute z-50 bg-gray-700/50">
-		<div class="bg-gray-900 h-[300px] w-[400px] rounded shadow flex flex-col justify-center items-center gap-5">
+	<div :class="{'hidden':!isOpen}" class="w-screen h-screen flex justify-center items-center absolute z-50 ">
+		<div class=" h-[300px] w-[400px] rounded shadow flex flex-col justify-center items-center gap-5">
 			<div class="flex flex-row relative items-center justify-center">
 				<i class="uil uil-check text-2xl absolute text-green-700 right-[45px]"></i>				
 				<h3 class="text-white">Done!</h3>
@@ -25,7 +25,7 @@
 				<h2 class="text-xl font-bold text-white">One last thing!</h2>
 				<p class="text-xl font-thin text-white text-center">Check out your inbox in: <span>{{email}}</span></p>
 			</div>
-			<button class="py-2 px-5 bg-yellow-500 rounded text-black font-black shadow">OK</button>
+			<button @click="isOpen=!isOpen" class="py-2 px-5 bg-yellow-500 rounded text-black font-black shadow">OK</button>
 		</div>
 	</div>
 	<div class="section bg-login">
@@ -33,7 +33,7 @@
 			<div class="row full-height justify-content-center">
 				<div class="col-12 text-center align-self-center py-5">
 					<div class="section pb-5 pt-5 pt-sm-2 text-center">
-						<h6 class="mb-0 pb-3"><span>Log In </span><span>Sign Up</span></h6>
+						<h6 class="mb-0 mt-1 pb-1"><span>Log In </span><span>Sign Up</span></h6>
 						<input class="checkbox" type="checkbox" id="reg-log" name="reg-log" />
 						<label for="reg-log"></label>
 						<div class="card-3d-wrap mx-auto">
@@ -61,7 +61,7 @@
 								<div class="card-back">
 									<div class="center-wrap">
 										<div class="relative section text-center">
-											<h4 class="mb-4 pb-3">Sign Up</h4>
+											<h4 class="pb-2 text-1xl">Sign Up</h4>
 											<div class="form-group">
 												<input v-model="firstName" type="text" name="firstName" class="pl-[35px] form-style bg-gray-900"
 													placeholder="Your first name" id="logname" autocomplete="off">
