--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -112,20 +112,24 @@
         </div> <!-- navbar area -->
 
         <div id="home" class="header-hero bg_cover align-items-center">
-            <video autoplay muted loop id="myVideo">
+            <div>
+                <video autoplay muted loop id="myVideo" class="landingVideo">
                 <source src="./assets/images/videos/landingVideo.mp4" type="video/mp4">
               </video>
-            <div class="container" >
-                <div class="row justify-content-center">
-                    <div class="col-lg-9">
-                        <div class="header-hero-content text-center">
+              <div class="header-hero-content text-center movements">
                             <h3 class="header-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Balcam's is the best option</h3>
                             <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">This gym is the best you can choose, if what you want is a real change in your physical appearance</p>
                             <ul>
                                 <li><a href="./login.html"  rel="nofollow" class="main-btn wow fadeInUp font-weight-bold" data-wow-duration="1.3s" data-wow-delay="0.8s">Register FREE Now</a></li>
                                 <li><a href="/web/shop.html" class="main-btn main-btn-2 wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.2s">Shop NOW</a></li>
                             </ul>
-                        </div> <!-- header hero content -->
+                        </div>
+            </div>
+            
+            <div class="container" >
+                <div class="row justify-content-center">
+                    <div class="col-lg-9">
+                         <!-- header hero content -->
                     </div>
                 </div> <!-- row -->
             </div> <!-- container -->
