linkeado de pag, text "24hs abierto" en landing.

--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -116,14 +116,10 @@
                 <video autoplay muted loop id="myVideo" class="landingVideo">
                 <source src="./assets/images/videos/landingVideo.mp4" type="video/mp4">
               </video>
-<<<<<<< HEAD
-              <div class="header-hero-content text-center movements">
-=======
             <div class="container" >
                 <div class="row justify-content-center">
                     <div class="col-lg-9">
                         <div style="position:absolute; top:0; left:0;">
->>>>>>> cbc8ba43954668589f9f4d4d62499c75704c5ff5
                             <h3 class="header-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Balcam's is the best option</h3>
                             <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">This gym is the best you can choose, if what you want is a real change in your physical appearance</p>
                             </div>
@@ -383,6 +379,7 @@
                     <div class="section_title section_title_2 text-center pb-25">
                         <span class="line"></span>
                         <h3 class="title">Lessons Schedules</h3>
+                        <h5 class="title">Gym Open 24 hours a day, 7 days a week.</h5>
                         <p>Here you can see the schedules to register and attend the lessons that you are most interested in taking.</p>
                     </div>
                 </div>
@@ -434,7 +431,7 @@
                             </div>
                         </div>
                         <div class="pricing_btn">
-                            <a href="javascript:void(0)">Purchase Now</a>
+                            <a href="./login.html">Purchase Now</a>
                         </div>
                     </div>
                 </div>
@@ -455,7 +452,7 @@
                             </div>
                         </div>
                         <div class="pricing_btn pricing_btn_2">
-                            <a href="javascript:void(0)">Purchase Now</a>
+                            <a href="./login.html">Purchase Now</a>
                         </div>
                     </div>
                 </div>
@@ -476,7 +473,7 @@
                             </div>
                         </div>
                         <div class="pricing_btn">
-                            <a href="javascript:void(0)">Purchase Now</a>
+                            <a href="./login.html">Purchase Now</a>
                         </div>
                     </div>
                 </div>
