--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -107,6 +107,12 @@
                                     <li class="nav-item">
                                         <a class="page-scroll" href="./contact.html">Contact</a>
                                     </li>
+                                    <li class="nav-item">
+                                        <a :href="'./profile.html?id='+clients.id"><i class="lni lni-user"></i></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a @click="logOut" href="./index.html"><i class="lni lni-power-switch"></i></a>
+                                    </li>
                                 </ul>
                             </div> <!-- navbar collapse -->
                         </nav> <!-- navbar -->
